bk_ida/gccida/g2/get_file_function_name_long
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_file_function_name_long/src/tree.c:5139:7: error: use of undeclared identifier 'value_2'
v12 = value_2; 
      ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_file_function_name_long/src/tree.c:5140:6: error: use of undeclared identifier 'value_2'
if ( value_2 ) 
     ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_file_function_name_long/src/tree.c:5142:7: error: use of undeclared identifier 'value_2'
v13 = value_2 % 0x3EuLL; 
      ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_file_function_name_long/src/tree.c:5143:54: error: use of undeclared identifier 'value_2'
v14 = ( 0x8421084210842109LL * ( unsigned __int128)( value_2 / 0x7CuLL)) >> 64; 
                                                     ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_file_function_name_long/src/tree.c:5144:7: error: use of undeclared identifier 'value_2'
v12 = value_2 / 0x3EuLL - 62 * ( v14 >> 4); 
      ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_file_function_name_long/src/tree.c:5182:1: error: use of undeclared identifier 'value_2'
value_2 = v30; 
^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_file_function_name_long/src/tree.c:5193:16: error: use of undeclared identifier 'letters_1'
LOBYTE( v25) = letters_1[v38]; 
               ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_file_function_name_long/src/tree.c:5196:10: error: use of undeclared identifier 'letters_1'
v27[1] = letters_1[v12]; 
         ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_file_function_name_long/src/tree.c:5197:10: error: use of undeclared identifier 'letters_1'
v27[2] = letters_1[v26]; 
         ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_file_function_name_long/src/tree.c:5198:10: error: use of undeclared identifier 'letters_1'
v27[3] = letters_1[v28]; 
         ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_file_function_name_long/src/tree.c:5199:10: error: use of undeclared identifier 'letters_1'
v27[4] = letters_1[v29]; 
         ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_file_function_name_long/src/tree.c:5200:10: error: use of undeclared identifier 'letters_1'
v27[5] = letters_1[v24]; 
         ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_file_function_name_long/src/tree.c:5210:8: error: use of undeclared identifier 'sch_istable'; did you mean '_sch_istable'?
if ( ( sch_istable[v5] & 0x8C) == 0 && v5 != 46 ) 
       ^~~~~~~~~~~
       _sch_istable
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_file_function_name_long/src/safe-ctype.h:72:29: note: '_sch_istable' declared here
extern const unsigned short _sch_istable[256];
                            ^
13 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_file_function_name_long/src/obj/tree.o] Error 1
